fix: fixed respinsivity problems on mobiles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,10 @@ body {
     max-width: 90rem;
     width: 100%;
     background: white;
+    @media(max-width: 600px) {
+        max-width: 100vw;
+        margin: 0;
+    }
 }
 
 .footer {
@@ -30,7 +34,9 @@ body {
     background: $dark-violet;
     color: white;
     @media(max-width: 600px) {
-        margin: 1rem;
+        margin: 0rem;
+        padding: 1rem;
+        padding-top: 6rem;
     }
 }
 
@@ -66,11 +72,15 @@ body {
     line-height: 2.25rem;
     color: $light-blue;
     &--mail {
+        font-size: 1rem;
         text-decoration: none;
         border-bottom: 2px solid;
         padding-bottom: 0.25rem;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
     }
     &--footer-mail {
+        font-size: 1rem;
         padding-bottom: 0;
     }
 }
@@ -86,11 +96,10 @@ body {
 
 .repositories {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(580px, 1fr));
-    // grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(480px, 1fr));
     grid-gap: 1.5rem;
     @media(max-width: 600px) {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-template-columns: 1fr;
     }
 }
 
@@ -100,13 +109,19 @@ body {
     border-radius: 0.5rem;
     background: white;
     box-shadow: 0px 6px 16px rgba(24, 41, 67, 0.09);
+    @media(max-width: 350px) {
+        font-size: 0.625rem;
+    }
     &__content {
         margin: 3rem;
+        @media(max-width: 310px) {
+            margin: 1rem;
+        }
     }
     &__description {
         font-weight: 300;
-        font-size: 1.125rem;
-        line-height: 2rem;
+        font-size: 1.125em;
+        line-height: 2em;
         color: $grey;
     }
     &__footer {
@@ -115,22 +130,25 @@ body {
         padding: 1rem 3rem;
         background: #F5F7FA;
         border-radius: 0 0 0.5rem 0.5rem;
+        @media(max-width: 310px) {
+            padding: 1rem;
+        }
     }
     &__link {
         font-weight: 500;
-        font-size: 1.125rem;
-        line-height: 2rem;
+        font-size: 1.125em;
+        line-height: 2em;
         text-decoration: none;
         color: $light-blue;
         &--demo {
             position: relative;
-            padding-right: 25px;
+            padding-right: 1.5rem;
             display: flex;
             align-items: center;
             &::before {
                 content: '';
-                width: 24px;
-                height: 24px;
+                width: 1.5rem;
+                height: 1.5rem;
                 display: inline-block;
                 background-image: url(/assets/img/demo-icon.svg);
                 margin-right: 0.625rem;
@@ -147,13 +165,13 @@ body {
             }
         }
         &--github {
-            padding-left: 25px;
+            padding-left: 1.5rem;
             display: flex;
             align-items: center;
             &::before {
                 content: '';
-                width: 24px;
-                height: 24px;
+                width: 1.5rem;
+                height: 1.5rem;
                 display: inline-block;
                 background-image: url(/assets/img/code-icon.svg);
                 margin-right: 0.625rem;
@@ -210,6 +228,9 @@ body {
                 width: 5rem;
                 height: 0.25rem;
                 background-color: $light-blue;
+                @media(max-width: 1200px) {
+                    top: -1rem;
+                }
             }
         }
     }
@@ -221,12 +242,16 @@ body {
     }
     &__subheading {
         color: $dark-violet;
-        max-width: 379px;
-        width: 100%;
+        min-width: 379px;
         font-weight: 600;
         font-size: 2rem;
         line-height: 2.75rem;
         position: relative;
+        @media(max-width: 1200px) {
+            min-width: 0;
+            max-width: 379px;
+            width: 100%;
+        }
         &::before {
             top: -2rem;
             position: absolute;
@@ -235,6 +260,9 @@ body {
             border-radius: 1rem;
             width: 5rem;
             height: 0.25rem;
+            @media(max-width: 1200px) {
+                top: -1rem;
+            }
         }
         &--working-knowledge {
             &::before {
@@ -257,16 +285,21 @@ body {
 .skills {
     padding: 7rem;
     @media(max-width: 600px) {
+        padding: 1rem;
         margin: 1rem;
     }
     &__subsection {
         display: flex;
         justify-content: space-between;
-        @media(max-width: 600px) {
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        @media(max-width: 1200px) {
+            flex-direction: column;
+            justify-content: flex-start;
         }
     }
     &__item {
+        font-weight: normal;
+        font-size: 1.125rem;
+        line-height: 2.5rem;
         color: $grey;
         &::before {
             margin-right: 1rem;
@@ -275,6 +308,8 @@ body {
             height: 1em;
             width: 1em;
             mask: url(/assets/img/bullet.svg);
+            mask-size: contain;
+            mask-repeat: no-repeat;
         }
         &--working-knowledge {
             &::before {
@@ -293,13 +328,14 @@ body {
         }
     }
     &__list {
-        width: 100%;
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-template-columns: minmax(300px, 1fr) minmax(300px, 1fr);
         grid-gap: 1rem;
         list-style: none;
-        @media(max-width: 600px) {
-            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+        @media(max-width: 1200px) {
+            grid-template-columns: 1fr;
+            grid-gap: 0.5rem;
+            padding-left: 0;
         }
     }
 }
